fix nav z-index for home header

--- a/app/assets/stylesheets/styles/base/_header.scss
+++ b/app/assets/stylesheets/styles/base/_header.scss
@@ -8,6 +8,7 @@
     background-size: cover;
     background-position: center;
     color: $white;
+    z-index: $z-300;
 
     .header {
       &__h1 {
